# deps_popt

./: CMakeLists.txt
resources/popt_113_cmake/: CMakeLists.txt
resources/popt_113_include/: config.h
